Fixing alignment on chat page

--- a/web/src/components/chat/Welcome/Welcome.module.css
+++ b/web/src/components/chat/Welcome/Welcome.module.css
@@ -1,6 +1,6 @@
 .welcome {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   color: white;
   flex-direction: column;
